# SDL2_cpp_utils

./: CMakeLists.txt  README.md
cmake/: Getcmake_utils.cmake
safeSdlCall/: CMakeLists.txt  README.md
safeSdlCall/cmake/: GetSDL2.cmake  Getcmake_utils.cmake
safeSdlCall/src/: CMakeLists.txt  safeSdlCall.hh
safeSdlCall/test/: CMakeLists.txt  safeSdlCall_test.cc
sdl2_smart_ptrs/: CMakeLists.txt  README.md
sdl2_smart_ptrs/cmake/: FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_rtf.cmake  FindSDL2_ttf.cmake  GetSDL2Full.cmake
sdl2_smart_ptrs/src/: CMakeLists.txt
sdl2_smart_ptrs/test/: CMakeLists.txt  SDL2.supp  sdl2_mixer_smart_ptr_test.cc  sdl2_net_smart_ptr_test.cc  sdl2_rtf_smart_ptr_test.cc  sdl2_smart_ptr_test.cc  sdl2_ttf_smart_ptr_test.cc
